sort zip file list